--- a/gb/15/7/13/n4479150.md
+++ b/gb/15/7/13/n4479150.md
@@ -1,13 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jbnpp2467/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>八大美国名校 免费线上课程自由选</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2015/07/1506291440501949.jpg" />
-<h6>美国八所名校提供了各种免费网络课程，使学生无需支付巨额的学费，就有机会学习顶级课程。(Fotolia)
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2015年07月13日讯】（大纪元记者秦飞编译报导）在线<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>网站myonlinecollegecourse.com罗列了以下八大提供了各种免费网络课程的美国名校。这些课程都是开放课件（OpenCourseWare，简称OCW）项目的一部分，使学生无需支付巨额的学费，就有机会学习顶级课程。OCW是由麻省理工学院率先使用的免费获取在线教材的服务，全球各地的高等学院也在相继 采取这种做法。师生可随时获得教材，课程为自学，但不会在结业时向学生发放<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A6%E5%88%86.md#1">学分</a>。</p>
-<p><b>1. 卡内基梅隆<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>（Carnegie Mellon University）：</b>该<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>提供了非<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A6%E5%88%86.md#1">学分</a>课程，学生可通过其免费课件项目-开放学习计划（Open Learning Initiative）-来获得教材。自学课程的科目包括统计、生物、化学、法语和英语，以及自我评估。</p>
+<p>【大纪元2015年07月13日讯】（大纪元记者秦飞编译报导）在线<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>网站myonlinecollegecourse.com罗列了以下八大提供了各种免费网络课程的美国名校。这些课程都是开放课件（OpenCourseWare，简称OCW）项目的一部分，使学生无需支付巨额的学费，就有机会学习顶级课程。OCW是由麻省理工学院率先使用的免费获取在线教材的服务，全球各地的高等学院也在相继 采取这种做法。师生可随时获得教材，课程为自学，但不会在结业时向学生发放<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E5%88%86.md#1">学分</a>。</p>
+<p><b>1. 卡内基梅隆<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>（Carnegie Mellon University）：</b>该<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>提供了非<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E5%88%86.md#1">学分</a>课程，学生可通过其免费课件项目-开放学习计划（Open Learning Initiative）-来获得教材。自学课程的科目包括统计、生物、化学、法语和英语，以及自我评估。</p>
 <p><b>2. 麻省理工学院（MIT）：</b>麻省理工的OCW提供了超过2,000门免费本科和研究生课程，涉及了几十个学科领域，包括生物工程、经济学，健康科学、媒体艺术和管理。这些非学分课程以文本、音频和视频格式推出，有些甚至被翻译成其它语言。学生可有机会获得讲义、作业和考试，很多课程的教材可被下载。</p>
 <p><b>3. 塔夫茨大学（Tufts University）：</b>该校也提供了免费OCW课程，任何人都可通过网络获得教材。他们提供了很多科学方面的课程，例如医学、牙科和兽医学。这些网络课程不提供学分，但学生能获取教材、讲义和其它的辅助材料，还必须完成家庭作业。</p>
 <p><b>4. 加州大学伯克利分校：</b>伯克利提供了免费网络课程视频，可追溯到2005年。无论现有课程还是存档课程均以播客和视频网络形式推出。课程涵盖的科目包括天文学、计算机科学、工程、法律和哲学。其网络课程通常要求学生完成家庭作业或考试。</p>
@@ -22,48 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/6/10/30/n1503720.md#1">Visa金融教育走入校园  今起开放线上课程</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/9/n4476180.md#1">惠及600万人 美PAYE学贷细则将出炉</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/9/n4476365.md#1">李国好：一位老教育工作者发不出的文章</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/9/n4476395.md#1">美众院批准大修教育法：不落下一个孩子</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/9/n4476496.md#1">纽约市教育改革：设7个教育服务中心</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/10/n4477105.md#1">湾区妈妈分享：夏令营的快乐经历</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/10/n4477116.md#1">如何培养孩子的独立性？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/10/n4477125.md#1">分析美国一流大学录取案例</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/10/n4477236.md#1">亚裔告哈佛被驳回 议员吁结束种族招生制</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/10/n4477909.md#1">子女转读私立名校 美教育部长受热议</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/10/30/n1503720.md#1">Visa金融教育走入校园  今起开放线上课程</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/9/n4476180.md#1">惠及600万人 美PAYE学贷细则将出炉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/9/n4476365.md#1">李国好：一位老教育工作者发不出的文章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/9/n4476395.md#1">美众院批准大修教育法：不落下一个孩子</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/9/n4476496.md#1">纽约市教育改革：设7个教育服务中心</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/10/n4477105.md#1">湾区妈妈分享：夏令营的快乐经历</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/10/n4477116.md#1">如何培养孩子的独立性？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/10/n4477125.md#1">分析美国一流大学录取案例</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/10/n4477236.md#1">亚裔告哈佛被驳回 议员吁结束种族招生制</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/10/n4477909.md#1">子女转读私立名校 美教育部长受热议</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/23/n11890264.md#1" target="_blank">《转法轮》为波兰青年打造全新的生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/1/21/n11810638.md#1">【思想领袖】迈克尔：时间站在香港这一边</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/19/n11952797.md#1">【现场视频】风吹保护套卷轿车 几百户面临火灾</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947422.md#1">【四维健康】感染中共肺炎有3种反应 哪种最严重？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947465.md#1">【抗疫家务通】这5类食物 进微波炉可能伤人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/13/n4479150.htm">八大美国名校 免费线上课程自由选</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/13/n4479150.htm">八大美国名校 免费线上课程自由选</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jbnpp2467/djy/blob/master/gb/15/7/13/n4479150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/15/7/13/n4479150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
